--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
@@ -25,7 +27,7 @@
     "jshint-loader": "^0.8.3",
     "node-sass": "^3.3.3",
     "path": "^0.12.7",
-    "react-hot-loader": "^1.3.0",    
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
